// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component only opens the last section when multiple sections have been clicked 1`] = `
<ul>
  <li>
    <button
      key="0"
      onClick={[Function]}
    >
      The title
    </button>
  </li>
  <li>
    <button
      key="1"
      onClick={[Function]}
    >
      The second title
    </button>
    <p>
      The content is here too
    </p>
  </li>
  <li>
    <button
      key="2"
      onClick={[Function]}
    >
      The third title
    </button>
  </li>
</ul>
`;

exports[`Accordion Component opens a clicked section 1`] = `
<ul>
  <li>
    <button
      key="0"
      onClick={[Function]}
    >
      The title
    </button>
  </li>
  <li>
    <button
      key="1"
      onClick={[Function]}
    >
      The second title
    </button>
    <p>
      The content is here too
    </p>
  </li>
  <li>
    <button
      key="2"
      onClick={[Function]}
    >
      The third title
    </button>
  </li>
</ul>
`;

exports[`Accordion Component renders an empty li when the sections prop is not supplied 1`] = `<ul />`;

exports[`Accordion Component renders no sections as active by default 1`] = `
<ul>
  <li>
    <button
      key="0"
      onClick={[Function]}
    >
      The title
    </button>
  </li>
  <li>
    <button
      key="1"
      onClick={[Function]}
    >
      The second title
    </button>
  </li>
  <li>
    <button
      key="2"
      onClick={[Function]}
    >
      The third title
    </button>
  </li>
</ul>
`;
